--- a/template.html
+++ b/template.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Template Bootstrap</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Bootstrap -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-</head>
-<body>
-<h1>Hello, Bootstrap!</h1>
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-</body>
+	<head>
+		<title> Template bootstrap </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!--Botstrap-->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	</head>
+	<body>
+		<h1> Hello word </h1>
+		<script src="js/jquery.js"> </script>
+		<script src="js/bootstrap.min.js"> </script>
+	</body>
 </html>
